--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,7 @@
 name    = String-Errf
-author  = Ricardo Signes <rjbs@cpan.org>
+author  = Ricardo Signes <cpan@semiotic.systems>
 license = Perl_5
 copyright_holder = Ricardo Signes
 
 [@RJBS]
+perl-window = long-term
